--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -98,6 +98,7 @@
 					            	<li><a sec:authorize="isAnonymous()" th:href="@{/login}">Log In</a></li>
 					            	<li><a sec:authorize="isAnonymous()" th:href="@{/userRegister}">Account Create</a></li>
 						            <li><a sec:authorize="isAuthenticated()" th:href="@{/myProfile}">My Profile</a></li>
+						            <li><a th:href="@{/about}">About Recruiter</a></li>
 						             <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}">LogOut</a></li>
 						             <li><a sec:authorize="isAuthenticated()" th:href="@{/updateUser}">Edit</a></li>
 									<li class="dropdown ">
@@ -224,9 +225,7 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6 vertical-space-2">
 					<h5>About Us</h5>
-					<p class="paregraf">Tristique velit phasellus sed auctor leo
-						eros luctus nibh fermentu ad impediet rhonus dolor habitant purus
-						velit aliquet donecurna ut in turpis faucibus</p>
+					<p class="paregraf">Students of UIT(University of Information Technology) developed together.</p>
 					<a href="#"> <i class="fa fa-facebook social-icon"></i></a> <a
 						href="#"> <i class="fa fa-twitter social-icon"></i></a> <a
 						href="#"> <i class="fa fa-pinterest-p social-icon"></i></a> <a
