--- a/src/main/resources/templates/common/master.html
+++ b/src/main/resources/templates/common/master.html
@@ -101,12 +101,11 @@
 						            <li><a th:href="@{/about}">About Recruiter</a></li>
 						             <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}">LogOut</a></li>
 						             <li><a sec:authorize="isAuthenticated()" th:href="@{/updateUser}">Edit</a></li>
-									<li class="dropdown ">
+									<li class="dropdown" sec:authorize="hasAnyAuthority('ROLE_COMPANY')">
                                         <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="fa fa-building fa-2x" aria-hidden="true"></i>
                                             <span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a href="job_category.html">Edit Profile</a></li>
                                             <li><a th:href="@{/viewPosts}">View Uploaded Posts</a></li>
                                         </ul>
                                     </li>
@@ -115,9 +114,10 @@
                                             <span class="caret"></span>
                                         </a>
                                         <ul class="dropdown-menu">
-                                            <li><a th:href="@{/signup}">Sign Up</a></li>
+                                            <li><a th:href="@{/newUser}">Sign Up</a></li>
                                             <li><a th:href="@{/login}">LogIn</a></li>
                                             <li><a sec:authorize="hasAnyAuthority('ROLE_COMPANY')" th:href="@{/companyAccount}">My Account</a></li>
+                                            <li><a sec:authorize="hasAnyAuthority('ROLE_END_USER')" th:href="@{/updateUser}">My Account</a></li>
                                             <li><a sec:authorize="hasAnyAuthority('ROLE_COMPANY')" th:href="@{/payment}">My Payment</a></li>
                                         </ul>
                                     </li>
@@ -278,7 +278,6 @@
 		<script th:src="@{/owlcarousel/owl.carousel.min.js}"></script>
 		<script th:src="@{/js/jquery-ui.min.js}"></script>
 		<script th:src="@{/js/sweetalert.min.js}"></script>
-		<script th:src="@{/js/mdb.min.js}"></script>
 		<script th:src="@{/js/custom.js}"></script>
 		<script th:src="@{/js/myjs.js}"></script>
 		<script>
