--- a/src/main/resources/templates/job-post-detail.html
+++ b/src/main/resources/templates/job-post-detail.html
@@ -9,6 +9,9 @@
         <section id="resent-job-post" class="mt-10">
             <div class="vertical-space-100"></div>
             <div class="vertical-space-101"></div>
+            <div class="list-box">
+                <a th:href="@{/viewPosts}" class="font-color-black margin-right">All Jobs </a> > <a href="#" class="font-color-orange margin-left"> Post job</a>
+            </div>
             <div class="d-flex align-items-center justify-content-center">
                 <div class="shadow-lg p-3 mb-8 w-25 bg-light text-align-center rounded ">  
                     <h1 class="display-3 text-center" th:text="${jobPost.jobTitle}"></h1>
