--- a/src/main/resources/templates/post_job.html
+++ b/src/main/resources/templates/post_job.html
@@ -12,7 +12,7 @@
         <div class="vertical-space-101"></div>
         <div class="container">
             <div class="list-box">
-                <a href="#" class="font-color-black margin-right">Job </a> > <a href="#" class="font-color-orange margin-left"> Post job</a>
+                <a th:href="@{/viewPosts}" class="font-color-black margin-right">All Jobs </a> > <a href="#" class="font-color-orange margin-left"> Post job</a>
             </div>
             <!-- <a href="#" class="Save">Save</a> -->
             <div class="vertical-space-60"></div>
